# swift-cut

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/backend/: Cargo.toml  core.rs  jni.rs  project_util.rs
app/src/main/backend/.cargo/: config.toml
app/src/main/java/io/github/swift-cut/: EditorActivity.kt  MainActivity.kt  SwiftCutTheme.kt
app/src/main/java/io/github/swift-cut/ui/editor/: EditorScreen.kt
app/src/main/java/io/github/swift-cut/ui/navigation/: AppNavHost.kt
app/src/main/java/io/github/swiftcut/: EditorActivity.kt  MainActivity.kt  NativeLib.kt  SwiftCutApplication.kt  SwiftCutTheme.kt
app/src/main/java/io/github/swiftcut/services/: LoggerService.kt
app/src/main/java/io/github/swiftcut/ui/common/: HomeDestination.kt
app/src/main/java/io/github/swiftcut/ui/editor/: EditorScreen.kt
app/src/main/java/io/github/swiftcut/ui/navigation/: AppNavHost.kt
app/src/main/java/io/github/swiftcut/utils/: PPMLoader.kt  ProjectStorage.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
