[package]
name = "swiftcut_backend"
version = "1.0.0"
edition = "2024"

[lib]
name = "swiftcut_backend"
path = "jni.rs"
crate-type = ["cdylib"]

[target.aarch64-linux-android]
ar = "/usr/local/lib/android/sdk/ndk/27.3.13750724/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar"
nm = "/usr/local/lib/android/sdk/ndk/27.3.13750724/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-nm"
ranlib = "/usr/local/lib/android/sdk/ndk/27.3.13750724/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ranlib"

[dependencies]
jni = "0.21"
ffmpeg-next = { version = "8.0.0", features = ["build"] }
