[package]
name = "swiftcut_backend"
version = "1.0.0"
edition = "2024"

[lib]
name = "swiftcut_backend"
path = "jni.rs"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
ffmpeg-next = { git = "https://github.com/Ishan09811/rust-ffmpeg", branch = "patch-1", features = ["build"] }
simd-json = "0.17"
